package pt.isep.psoft.aisafe.domain;

public enum AirportStatus {
    OPERATIONAL,
    CLOSED,
    UNDER_MAINTENANCE
}