package pt.isep.psoft.aisafe.domain;

public enum FlightStatus {
    SCHEDULED,
    DELAYED,
    IN_FLIGHT,
    COMPLETED,
    CANCELLED
}