@startuml
skinparam classAttributeIconSize 0
hide empty members
title US212-DM

package "Scheduled Flight Aggregate" {
    class ScheduledFlight <<Entity>> <<Root>> {
        - scheduledDateTime: LocalDateTime
    }

    enum FlightStatus <<Enumeration>> {
        SCHEDULED
    }

    ScheduledFlight "1" --> "1" FlightStatus : has >
}

package "Route Aggregate" {
    class Route <<Entity>> <<Root>> {
        - estimatedFlightTime: Integer
        - minimumRange: Double
        - minimumCapacity: Integer
    }

    class RouteId <<Value Object>> {
        - id: String
    }

    Route "1" *-- "1" RouteId : identified by >
}

package "Airport Aggregate" {
    class Airport <<Entity>> <<Root>> {
        - name: String
        - city: String
        - country: String
    }

    enum AirportStatus <<Enumeration>> {
        OPERATIONAL
        CLOSED
    }

    Airport "1" --> "1" AirportStatus : has >
}

package "Aircraft Aggregate" {
    class Aircraft <<Entity>> <<Root>> {
        - actualSeatingCapacity: Integer
    }

    class RegistrationNumber <<Value Object>> {
        - number: String
    }

    enum AircraftStatus <<Enumeration>> {
        ACTIVE
    }

    Aircraft "1" *-- "1" RegistrationNumber : identified by >
    Aircraft "1" --> "1" AircraftStatus : has >
}

package "Aircraft Model Aggregate" {
    class AircraftModel <<Entity>> <<Root>> {
        - maximumRange: Double
    }
}

ScheduledFlight "*" --> "1" Route : follows >
ScheduledFlight "*" --> "1" Aircraft : assigned to >
Route "*" --> "2" Airport : connects (origin, destination) >
Aircraft "*" --> "1" AircraftModel : is of model >
@enduml